@@ -1,3 +1,8 @@
+2006-08-16  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* macosx/tkMacOSXWm.c (WmAttributesCmd): correct OS X result for
+	[wm attributes $top].
+
 2006-07-25  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXKeyEvent.c (TkMacOSXProcessKeyboardEvent): handle key
